--- a/corenlp/default.properties
+++ b/corenlp/default.properties
@@ -1,9 +1,12 @@
-annotators = tokenize, ssplit, pos, lemma, depparse
+annotators = tokenize,ssplit,pos,lemma,ner,parse,depparse,regexner,relation,entitymentions
 
 # specify Stanford Dependencies format for backwards compatibility
 # (new default is Universal Dependencies in 3.5.2)
 depparse.model = edu/stanford/nlp/models/parser/nndep/english_SD.gz
 
+outputFormat = xml
+
+regexner.mapping = /Users/john/code/macrostrat/burwell/stanford-corenlp-python/new_dictionary.txt
 # A true-casing annotator is also available (see below)
 #annotators = tokenize, ssplit, pos, lemma, truecase
 
@@ -27,7 +30,7 @@ depparse.model = edu/stanford/nlp/models/parser/nndep/english_SD.gz
 #ner.model.7class = /u/nlp/data/ner/goodClassifiers/muc.distsim.crf.ser.gz
 #ner.model.MISCclass = /u/nlp/data/ner/goodClassifiers/conll.distsim.crf.ser.gz
 
-#regexner.mapping = /u/nlp/data/TAC-KBP2010/sentence_extraction/type_map_clean
+
 #regexner.ignorecase = false
 
 #nfl.gazetteer = /scr/nlp/data/machine-reading/Machine_Reading_P1_Reading_Task_V2.0/data/SportsDomain/NFLScoring_UseCase/NFLgazetteer.txt
